--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,13 +1,21 @@
 {{ define "main" }}
 {{ partial "title.html" . }}
-
-
 <section class="featured">
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/961576265?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Showreel // 2024 // Aljoša Dakić"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+    <!-- Smaller Vimeo video container -->
+    <div style="max-width: 600px; margin: 0 auto;">
+        <div style="padding:56.25% 0 0 0;position:relative;">
+            <iframe src="https://player.vimeo.com/video/961576265?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+                    frameborder="0" 
+                    allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;" 
+                    title="Showreel // 2024 // Aljoša Dakić">
+            </iframe>
+        </div>
+    </div>
+    <script src="https://player.vimeo.com/api/player.js"></script>
 </section>
-
 {{ partial "categories.html" }}
-
 {{ partial "featured.html" . }}
 <section class="galleries">
     {{ range where .Pages "Params.private" "ne" true }}
@@ -15,6 +23,3 @@
     {{ end }}
 </section>
 {{ end }}
-
-
-
